--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -51,6 +51,6 @@
     </div>
   </div>
 
-  <script src="js/1-timer.js" type="module"></script>
+  <script src="1-timer.js" type="module"></script>
 </body>
 </html>
