--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -43,6 +43,6 @@
     </form>
   </div>
 
-  <script src="js/2-snackbar.js" type="module"></script>
+  <script src="2-snackbar.js" type="module"></script>
 </body>
 </html>
