--- a/src/01-timer.html
+++ b/src/01-timer.html
@@ -51,6 +51,6 @@
     </div>
   </div>
 
-  <script src="1-timer.js" type="module"></script>
+  <script src="js/01-timer.js" type="module"></script>
 </body>
 </html>
